objects/Parent__c.object
<CustomObject>
    <description>Child object for school name object</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Enter Your Address</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <description>Enter Your Contact Number</description>
        <label>Contact Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Father_Profession__c</fullName>
        <label>Father Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Un-Employed</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <description>Please Enter Mother Name</description>
        <label>Mother Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Profession__c</fullName>
        <label>Mother Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>House Wife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>